...
        {loading && (
          <View style={styles.activityIndicatorContainer}>
            <ActivityIndicator />
          </View>
        )}
        {data && <Text style={styles.item}>Signed in as {data.currentUser?.email}</Text>}
        <TextLink onPress={discardToken} text="Sign out" style={styles.signOutButton} />

        <View style={styles.divider} />
        <Text color="textGrey" size="xsmall" style={styles.heading}>
          Settings
        </Text>
        <Pressable
...
