...
  return (
    <SafeAreaView style={styles.container}>
      <View style={styles.innerContainer}>
        <Image source={image} resizeMode="contain" style={styles.illustration} />
        <View>
          <Text weight="bold" size="xlarge" style={[styles.text, styles.title]}>
            All done!
          </Text>
          <Text style={styles.text}>
            You’re all set up to receive reminders on <Text weight="semibold">{days}</Text> at{' '}
            <Text weight="semibold">{formatShortTime(new Date(remindersData.time!))}</Text>.
          </Text>
          <Text style={styles.text}>
            You can pause or change your reminders on the <Text weight="semibold">Account</Text>{' '}
            screen.
          </Text>
        </View>
      </View>
      <Button title="Finish" onPress={() => pop(depth)} style={styles.button} />
    </SafeAreaView>
  );
}

const SPACING = 24;

...
